# sdpp_sim

./: .gitignore  CMakeLists.txt
SDPP_gazebo/: CMakeLists.txt  package.xml  setup.py
SDPP_gazebo/config/: map_meta_1.yaml
SDPP_gazebo/launch/: movo_SDPP.launch  test_world.launch
SDPP_gazebo/models/coffee_machine/: model.dae
SDPP_gazebo/models/microwave/: model.config  model.dae
SDPP_gazebo/scripts/: cost_map.py  map_script.py  timed_roslaunch
SDPP_gazebo/src/: model_walk.cpp
SDPP_gazebo/src/sdpp_modules/: sdpp_agents.py  sdpp_maps.py  sdpp_tools.py
SDPP_gazebo/srv/: set_goal.srv
SDPP_gazebo/worlds/: sdpp_base.world
SDPP_sim/: CMakeLists.txt  package.xml
archive/sdpp_devel/launch/: movo_sdpp_nav.launch  movo_sdpp_world.launch  object_identifier.launch  test.launch
archive/sdpp_devel/scripts/: gridworld_ai_gym.py  map_script.py  viewer_node.py
archive/sdpp_explore/config/: goals.yaml  object_loc_test.yaml
archive/sdpp_explore/launch/: explore_lite.launch  traj_analyzer_test.launch
archive/sdpp_explore/nodes/: agent_recorder_node.py  traj_analyzer_node.py
archive/sdpp_explore/scripts/: obj_to_assoc.py  obj_to_goal.py  test_obj_to_goal.py
archive/sdpp_explore/srv/: AgentTrajBuild.srv
archive/sdpp_navigation/: costmap_plugins.xml
archive/sdpp_navigation/scripts/: run_value_iteration.py
docs/: Makefile
docs/source/: bringup.rst  conf.py  exploit.rst  explore.rst  gazebo.rst  index.rst  navigation.rst  testing_fw.rst
human_agent_description/: CMakeLists.txt  package.xml
human_agent_description/launch/: param_server.launch
models/coffee_machine/: model.sdf
models/fridge/: model.config  model.dae  model.sdf
models/microwave/: model.sdf
models/sink/: model.sdf
sdpp_bringup/: CMakeLists.txt  package.xml
sdpp_bringup/launch/: gmapping.launch  human_agent.launch  human_multi.launch  human_sdpp_agent.launch  movo_SDPP.launch  person_gazebo_urdf.launch  two_agent.launch  two_agent_record_traj.launch
sdpp_core/: CMakeLists.txt  costmap_plugins.xml  package.xml  setup.py
sdpp_core/launch/: two_agent.launch
sdpp_core/nodes/: viw_node.py
sdpp_core/plugins/: costmap_injection_layer.cpp
sdpp_core/rviz/: test_rviz.rviz
sdpp_core/scripts/: jupyter_VImaps_test.py  jupyter_test.py  path_mask_test.yaml  run_value_iteration.py  test_vi_maps.yaml  vi_maps.yaml
sdpp_core/test/: test_value_iteration.py
sdpp_devel/: CMakeLists.txt  package.xml  setup.py
sdpp_devel/config/: goal_loc1.yaml  objects_slim_coco.yaml
sdpp_devel/scripts/: association_test.py  cost_map.py  darknet_data.py  darknet_object_indentifier_node.py  record_node.py
sdpp_devel/text_lists/: movo_nodes  movo_topics
sdpp_experiments/: CMakeLists.txt  package.xml  setup.py
sdpp_experiments/config/: experiment1.yaml  experiment2.yaml
sdpp_experiments/launch/: template_agent.launch
sdpp_experiments/rviz/: test_rviz.rviz
sdpp_experiments/scripts/: move_script.py
sdpp_exploit/: CMakeLists.txt  package.xml  setup.py
sdpp_explore/: CMakeLists.txt  package.xml  setup.py
sdpp_explore/config/: goals_test.yaml  obj_assoc_test.yaml  objects_full_coco.yaml  objects_slim_coco.yaml
sdpp_explore/data/: test.yaml
sdpp_explore/depricated/: old_people_libs.py
sdpp_explore/launch/: frontier.launch
sdpp_explore/nodes/: agent_recorder_node.py  object_identifier_node.py
sdpp_explore/srv/: AgentTrajRegister.srv
sdpp_gazebo/: CMakeLists.txt
sdpp_gazebo/config/: goal_loc1.yaml
sdpp_gazebo/gimp/: basic_5_goal_10x10.xcf  narrow_3_goal_10x10.xcf
sdpp_gazebo/launch/: test_world.launch
sdpp_gazebo/plugin/: model_walk.cpp
sdpp_gazebo/scripts/: config_space_map.py
sdpp_gazebo/worlds/: basic_5_goal_10x10.world  data_assoc_1.world  evaluation_world_simple.world  hello.world  narrow_3_goal_10x10.world  sdpp_base.world  test_world.world
sdpp_human_description/: CMakeLists.txt  package.xml
sdpp_human_description/urdf/: base_model.urdf  diff_human.gazebo.xacro  diff_human.urdf.xacro  person.urdf  turtlebot3_waffle_pi.gazebo.xacro  turtlebot3_waffle_pi.urdf.xacro  turtlebot3_waffle_pi_human_0.gazebo.xacro  turtlebot3_waffle_pi_human_agent.gazebo.xacro
sdpp_human_navigation/: CMakeLists.txt  package.xml
sdpp_human_navigation/config/: blank_map.yaml
sdpp_human_navigation/data/: subset.bag
sdpp_human_navigation/launch/: fake_nav.launch  human_multi.launch  human_nav_with_movo.launch  human_navigation.launch  move_base.launch  navigation.launch  param_server.launch  remote.launch
sdpp_human_navigation/launch/multi_agent/: multi_agent_human_nav.launch  test_move_base.launch
sdpp_human_navigation/param/: costmap_common_params.yaml  global_costmap_params.yaml
sdpp_human_navigation/param/human/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
sdpp_human_navigation/param/human_sdpp/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
sdpp_human_navigation/rviz/: human_0.rviz
sdpp_human_navigation/scripts/: action_goal.py
sdpp_navigation/: CMakeLists.txt  costmap_plugins.xml  package.xml  setup.py
sdpp_navigation/cfg/: trajinterface.cfg
sdpp_navigation/config/agent_waypoints/: set_1.yaml
sdpp_navigation/include/: grid_layer.h
sdpp_navigation/include/sdpp_navigation/: costmap_injection_layer.h
sdpp_navigation/nodes/: viw_node.py
sdpp_navigation/plugins/: costmap_injection_layer.cpp  grid_layer.cpp  simple_layer.cpp
sdpp_navigation/scripts/: load_map.py  map_server_save_occ_grid.py  move_script.py  pub_fake_map.py  record_movement.py  run_value_iteration.py  test_run.py
sdpp_navigation/src/: grid_layer.cpp
sdpp_navigation/src/sdpp_navigation/: grid_world.py  metrics.py  ros_wrappers.py  value_iter_weighting.py
sdpp_navigation/test/: test_value_iter_weighting.py  test_value_iteration.py
sdpp_sim/: package.xml
sdpp_testing_fw/: CMakeLists.txt  package.xml  setup.py
sdpp_testing_fw/launch/: 2_agent_test.launch
sdpp_testing_fw/scripts/: move_script.py  record_movement.py
src/: model_walk.cpp  simple_world_plugin.cpp
worlds/: hello.world  test_world.world
(+70 files in other folders)
