<package format="2">
  <name>sdpp_sim</name>
  <version>0.0.0</version>
  <description>The cob_simulation stack includes packages to work with Care-O-bot within simulation environments, e.g. gazebo.</description>

  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_simulation</url>
  <!-- <url type="bugtracker"></url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>sdpp_gazebo</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
