<package format="2">
  <name>sdpp_sim</name>
  <version>0.0.0</version>
  <description>Simulator of SDPP</description>

  <maintainer email="jeve0658@colorado.edu">Jeff Venicx</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>sdpp_gazebo</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
